Re-write layout code.

--- a/staggeredgridview/src/main/res/values/attrs.xml
+++ b/staggeredgridview/src/main/res/values/attrs.xml
@@ -17,10 +17,10 @@
 
 <resources>
 
-
   <declare-styleable name="StaggeredGridView">
     <attr name="android:numColumns"/>
-    <attr name="itemMargin" format="dimension"/>
+    <attr name="verticalItemMargin" format="dimension"/>
+    <attr name="horizontalItemMargin" format="dimension"/>
     <attr name="android:listChoiceBackgroundIndicator"/>
   </declare-styleable>
 
