--- a/staggeredgridview-samples/src/main/res/layout/content.xml
+++ b/staggeredgridview-samples/src/main/res/layout/content.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -53,7 +54,9 @@
         android:paddingRight="16dp"
         android:numColumns="1"
         android:scrollbars="vertical"
-        android:scrollbarStyle="outsideOverlay"/>
+        android:scrollbarStyle="outsideOverlay"
+        app:verticalItemMargin="5dp"
+        app:horizontalItemMargin="20dp"/>
 
     <TextView
         android:id="@android:id/empty"
